--- a/02- CSS/01- Introduction/code/style/index.css
+++ b/02- CSS/01- Introduction/code/style/index.css
@@ -14,3 +14,11 @@ main {
 #playground {
   padding: 1rem;
 }
+
+#playground #playground-title {
+  margin-bottom: 1rem;
+}
+
+#playground p {
+  font-weight: bold;
+}
