--- a/01- HTML/12- Lists/code/style/index.css
+++ b/01- HTML/12- Lists/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -23,4 +23,8 @@ ol {
   margin-left: 1rem;
   font-size: small;
   font-weight: bold;
+}
+
+ol li {
+  margin-bottom: 0.5rem;
 }
