--- a/02- CSS/02- Background/code/style/mobile.css
+++ b/02- CSS/02- Background/code/style/mobile.css
@@ -1,9 +1,9 @@
 h1#hero-title {
-  font-size: larger;
+  font-size: large;
 }
 
 #playground-title {
-  font-size: large;
+  font-size: medium;
 }
 
 .wrapper {
