--- a/02- CSS/07- Positions/code/style/mobile.css
+++ b/02- CSS/07- Positions/code/style/mobile.css
@@ -1,9 +1,9 @@
 h1#hero-title {
-  font-size: larger;
+  font-size: large;
 }
 
 #playground-title {
-  font-size: large;
+  font-size: medium;
 }
 
 .artist-container {
@@ -12,4 +12,5 @@ h1#hero-title {
 
 .artist-name {
   font-size: small;
+  padding: 0.25rem;
 }
