--- a/02- CSS/10- Pseudo-Classes/code/style/index.css
+++ b/02- CSS/10- Pseudo-Classes/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -20,7 +20,7 @@ main {
 }
 
 form h4 {
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
 }
 
 input[type="checkbox"] {
