--- a/02- CSS/12- Pseudo-Elements Part Two/code/style/index.css
+++ b/02- CSS/12- Pseudo-Elements Part Two/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -30,7 +30,7 @@ main {
   z-index: -1;
   inset: 0;
   margin: auto 0;
-  height: 0.1rem;
+  height: 0.15rem;
   background-color: #db0030;
   transform: rotate(5deg);
   -webkit-transform: rotate(5deg);
