--- a/02- CSS/20- Variables/code/style/index.css
+++ b/02- CSS/20- Variables/code/style/index.css
@@ -1,11 +1,12 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
 
 main {
-  background: var(--primary) linear-gradient(#fff, var(--primary));
+  background: var(--primary, #db0030)
+    linear-gradient(#fff, var(--primary, #db0030));
   display: flex;
   align-items: center;
   justify-content: center;
