CSS Flexbox: 02- Edition

--- a/03- CSS Flexbox/02/code/style/index.css
+++ b/03- CSS Flexbox/02/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -22,7 +22,7 @@ main {
 .flex-container {
   background-color: var(--primary);
   width: 60%;
-  height: 60vh;
+  height: 60dvh;
   padding: 0.5rem;
   margin: 0 auto;
   display: flex;
@@ -41,8 +41,9 @@ main {
   background-color: white;
   width: 4rem;
   height: 4rem;
-  text-align: center;
-  line-height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: bold;
   font-size: small;
   border-radius: 0.25rem;
