--- a/03- CSS Flexbox/02/code/style/mobile.css
+++ b/03- CSS Flexbox/02/code/style/mobile.css
@@ -1,7 +1,13 @@
 h1#hero-title {
-  font-size: larger;
+  font-size: large;
 }
 
 #playground-title {
-  font-size: large;
+  font-size: medium;
+}
+
+.flex-item {
+  width: 3rem;
+  height: 3rem;
+  font-size: x-small;
 }
