--- a/03- CSS Flexbox/08/code/style/index.css
+++ b/03- CSS Flexbox/08/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -22,7 +22,7 @@ main {
 .flex-container {
   background-color: var(--primary);
   width: 60%;
-  height: 30vh;
+  height: 30dvh;
   padding: 0.5rem;
   margin: 0 auto;
   display: flex;
