--- a/04- CSS Grid/03/code/style/index.css
+++ b/04- CSS Grid/03/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -22,13 +22,11 @@ main {
 .container {
   display: grid;
   grid-template-columns: auto auto;
-  grid-template-rows: 8rem;
+  grid-template-rows: 5rem 4rem;
   gap: 0.5rem;
 }
 
 .container .item {
-  padding: 1rem;
-  text-align: center;
   font-size: large;
   font-weight: bold;
   display: flex;
