--- a/04- CSS Grid/07- Gallery/code/style/index.css
+++ b/04- CSS Grid/07- Gallery/code/style/index.css
@@ -1,5 +1,5 @@
 main {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,7 +7,7 @@ main {
 
 .wrapper {
   min-width: 50%;
-  min-height: 80vh;
+  min-height: 80dvh;
   display: grid;
   grid-template-columns: repeat(3, 10rem);
   grid-template-rows: 10rem 16rem;
