--- a/04- CSS Grid/10/code/style/index.css
+++ b/04- CSS Grid/10/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -20,16 +20,15 @@ main {
 }
 
 .container {
-  max-height: 60vh;
+  height: 60dvh;
   display: grid;
-  grid-template-columns: repeat(2, minmax(6rem, 12rem));
-  grid-template-rows: 8rem;
+  grid-template-columns: repeat(2, minmax(4rem, 6rem));
+  grid-template-rows: 4rem 4rem 4rem;
   align-content: center;
+  justify-content: space-around;
 }
 
 .container .item {
-  padding: 1rem;
-  text-align: center;
   font-size: large;
   font-weight: bold;
   display: flex;
