--- a/04- CSS Grid/12/code/style/index.css
+++ b/04- CSS Grid/12/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -20,17 +20,14 @@ main {
 }
 
 .container {
-  max-height: 60vh;
+  height: 40dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(4, 1fr);
   grid-template-areas: "un deux" "trois trois" "quatre quatre" "cinq six";
-  align-content: center;
 }
 
 .container .item {
-  padding: 1rem;
-  text-align: center;
   font-size: large;
   font-weight: bold;
   display: flex;
