--- a/04- CSS Grid/13/code/style/index.css
+++ b/04- CSS Grid/13/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -25,7 +25,7 @@ main {
 */
 
 .container {
-  max-height: 60vh;
+  height: 50dvh;
   width: 80%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(4rem, auto));
@@ -34,7 +34,6 @@ main {
 }
 
 .container .item {
-  padding: 1rem;
   font-size: large;
   font-weight: bold;
   display: flex;
