CSS Grid: 14- Edition

--- a/04- CSS Grid/14/code/style/index.css
+++ b/04- CSS Grid/14/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -20,15 +20,14 @@ main {
 }
 
 .container {
-  max-height: 70vh;
+  max-height: 70dvh;
   display: grid;
   align-content: center;
   /* R C */
-  grid-template: repeat(3, 5rem) / repeat(2, 1fr);
+  grid-template: repeat(3, 4rem) / repeat(2, 1fr);
 }
 
 .container .item {
-  padding: 1rem;
   font-size: large;
   font-weight: bold;
   display: flex;
