--- a/04- CSS Grid/15- Layout/code/style/mobile.css
+++ b/04- CSS Grid/15- Layout/code/style/mobile.css
@@ -8,12 +8,12 @@ h1#hero-title {
 
 .container {
   width: 90%;
-  grid-template-rows: repeat(3, 3rem);
+  grid-template-rows: repeat(3, 2rem);
 }
 
 .header,
 .main,
 .aside,
 .footer {
-  font-size: x-small;
+  font-size: small;
 }
