CSS Grid: 17- Edition

--- a/04- CSS Grid/17/code/style/index.css
+++ b/04- CSS Grid/17/code/style/index.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -21,17 +21,16 @@ main {
 
 .container {
   width: 80%;
-  height: 70vh;
+  height: 70dvh;
   margin-left: auto;
   margin-right: auto;
   display: grid;
-  grid-template: repeat(3, 4rem) / repeat(2, 8rem);
+  grid-template: repeat(4, 4rem) / repeat(2, 6rem);
   justify-content: center;
   align-content: start;
 }
 
 .container .item {
-  padding: 1rem;
   font-size: large;
   font-weight: bold;
   display: flex;
