CSS Grid: 23- Header Section

--- a/04- CSS Grid/23- Like McDonald's/style/input.css
+++ b/04- CSS Grid/23- Like McDonald's/style/input.css
@@ -55,10 +55,10 @@
 
 @layer components {
   .container {
-    @apply max-w-7xl mx-auto p-1 sm:py-2;
+    @apply max-w-7xl mx-auto p-2 sm:p-4;
   }
 
   .btn {
-    @apply w-16 h-8 px-1 py-2 text-xs rounded-md font-medium flex items-center justify-center sm:w-20 sm:h-10 sm:px-2 sm:py-4 sm:text-sm sm:rounded-2xl;
+    @apply w-16 h-8 px-1 py-2 text-xs rounded-xl font-medium flex items-center justify-center sm:w-20 sm:h-10 sm:px-2 sm:py-4 sm:text-sm sm:rounded-2xl;
   }
 }
