Sass: 01- Edition (Nesting Properties)

--- a/07- Sass/01/scss/tablet.scss
+++ b/07- Sass/01/scss/tablet.scss
@@ -1,6 +1,8 @@
 body {
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template: {
+    -columns: 1fr;
+    -rows: repeat(3, 1fr);
+  }
 }
 
 main {
