--- a/01- HTML/02- HTML Anatomy/code/styles/mobile.css
+++ b/01- HTML/02- HTML Anatomy/code/styles/mobile.css
@@ -1,7 +1,17 @@
-h1#hero-title {
-  font-size: larger;
-}
+body {
+  main {
+    #hero-title {
+      font-size: larger;
+    }
+  }
 
-#playground-title {
-  font-size: large;
+  section {
+    #playground-title {
+      font-size: large;
+    }
+
+    p {
+      font-size: small;
+    }
+  }
 }
