HTML: 04 - refactore css files

--- a/01- HTML/04- HTML Structure/code/styles/index.css
+++ b/01- HTML/04- HTML Structure/code/styles/index.css
@@ -1,20 +1,25 @@
 body {
-  min-height: 100dvh;
+  min-block-size: 100vh;
+  min-block-size: 100dvh;
+
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-}
 
-main {
-  background: #d1d8e0 radial-gradient(#d1d8e0, #ffffff);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  main {
+    background: #d1d8e0 radial-gradient(#d1d8e0, #ffffff);
 
-#playground {
-  padding: 1rem;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-#playground #playground-title {
-  margin-bottom: 1rem;
+  section {
+    &#playground {
+      padding: 1rem;
+
+      #playground-title {
+        margin-block-end: 1rem;
+      }
+    }
+  }
 }
