--- a/01- HTML/04- HTML Structure/code/styles/mobile.css
+++ b/01- HTML/04- HTML Structure/code/styles/mobile.css
@@ -1,7 +1,13 @@
-h1#hero-title {
-  font-size: larger;
-}
+body {
+  main {
+    #hero-title {
+      font-size: larger;
+    }
+  }
 
-#playground-title, #playground-title + h2 {
-  font-size: large;
+  section {
+    &#playground {
+      font-size: medium;
+    }
+  }
 }
