--- a/01- HTML/04- HTML Structure/code/styles/main.css
+++ b/01- HTML/04- HTML Structure/code/styles/main.css
@@ -1,6 +1,10 @@
-* {
+*,
+*::before,
+*::after {
   font-family: "Times New Roman", Times, serif;
+
   box-sizing: border-box;
+
   margin: 0;
   padding: 0;
 }
