--- a/01- HTML/17- Form Validation/code/styles/main.css
+++ b/01- HTML/17- Form Validation/code/styles/main.css
@@ -1,11 +1,16 @@
-* {
+*,
+*::before,
+*::after {
   font-family: "Times New Roman", Times, serif;
+
   box-sizing: border-box;
+
   margin: 0;
   padding: 0;
 }
 
 input[type="submit"] {
   text-transform: uppercase;
+  
   cursor: pointer;
 }
