--- a/02- CSS/07- Positions/code/styles/index.css
+++ b/02- CSS/07- Positions/code/styles/index.css
@@ -33,12 +33,14 @@ body {
       .artist-name {
         display: none;
 
-        font-weight: bold;
+        font-size: small;
 
         padding: 0.25rem 0.5rem;
 
-        background-color: #c41e3a;
-        border-radius: 0.5rem;
+        color: #fff;
+        background-color: #000;
+
+        border-radius: 0.25rem;
       }
 
       &:hover {
