--- a/02- CSS/07- Positions/code/styles/mobile.css
+++ b/02- CSS/07- Positions/code/styles/mobile.css
@@ -14,7 +14,7 @@ body {
       inline-size: 60%;
 
       .artist-name {
-        font-size: small;
+        font-size: x-small;
         
         padding: 0.25rem;
       }
