--- a/02- CSS/20- Variables/code/styles/main.css
+++ b/02- CSS/20- Variables/code/styles/main.css
@@ -2,9 +2,13 @@
   --primary: #db0030;
 }
 
-* {
+*,
+*::before,
+*::after {
   font-family: "Times New Roman", Times, serif;
+
   box-sizing: border-box;
+
   margin: 0;
   padding: 0;
 }
