--- a/02- CSS/26- Animated Border/code/styles/index.css
+++ b/02- CSS/26- Animated Border/code/styles/index.css
@@ -1,10 +1,3 @@
-main {
-  min-height: 100dvh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 @property --positionX {
   syntax: "<percentage>";
   initial-value: 50%;
@@ -15,21 +8,6 @@ main {
   syntax: "<percentage>";
   initial-value: 0%;
   inherits: true;
-}
-
-.division {
-  font-size: small;
-  font-weight: bold;
-  border: 0.15rem solid transparent;
-  border-image: radial-gradient(
-      ellipse at var(--positionX) var(--positionY),
-      var(--primary),
-      var(--white)
-    )
-    8;
-  padding: 1rem;
-  animation: exchange 1s linear infinite;
-  -webkit-animation: exchange 4s linear infinite;
 }
 
 @keyframes exchange {
@@ -52,5 +30,31 @@ main {
   100% {
     --positionX: 50%;
     --positionY: 0%;
+  }
+}
+
+body {
+  main {
+    min-block-size: 100vh;
+    min-block-size: 100dvh;
+
+    display: grid;
+    place-content: center;
+
+    .division {
+      font-size: small;
+      font-weight: bold;
+
+      border: 0.15rem solid transparent;
+      border-image: radial-gradient(
+          ellipse at var(--positionX) var(--positionY),
+          var(--primary),
+          var(--white)
+        )
+        8;
+      padding: 1rem;
+
+      animation: exchange 1s linear infinite;
+    }
   }
 }
