--- a/03- CSS Flexbox/05/code/styles/index.css
+++ b/03- CSS Flexbox/05/code/styles/index.css
@@ -24,13 +24,13 @@ body {
       background-color: var(--primary);
 
       inline-size: 60%;
-      height: 30dvh;
+      block-size: 30vh;
 
       padding: 0.5rem;
       margin: 0 auto;
 
       display: flex;
-      flex-flow: row wrap;
+      flex-flow: column wrap;
       align-content: center;
       gap: 0.5rem;
 
@@ -50,10 +50,6 @@ body {
         font-size: small;
 
         border-radius: 0.25rem;
-
-        &.precedence {
-          order: -1;
-        }
       }
     }
   }
