--- a/03- CSS Flexbox/06/code/styles/index.css
+++ b/03- CSS Flexbox/06/code/styles/index.css
@@ -23,40 +23,37 @@ body {
     .flex-container {
       background-color: var(--primary);
 
-      inline-size: 80%;
-      block-size: 30dvh;
+      inline-size: 60%;
+      height: 30dvh;
 
       padding: 0.5rem;
       margin: 0 auto;
 
       display: flex;
-      flex-flow: row nowrap;
+      flex-flow: row wrap;
+      align-content: center;
       gap: 0.5rem;
 
       border-radius: 0.25rem;
-    }
 
-    .flex-item {
-      background-color: white;
+      .flex-item {
+        background-color: white;
 
-      inline-size: 4rem;
-      block-size: 4rem;
+        inline-size: 4rem;
+        block-size: 4rem;
 
-      display: flex;
-      align-items: center;
-      justify-content: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-      font-weight: bold;
-      font-size: small;
+        font-weight: bold;
+        font-size: small;
 
-      border-radius: 0.25rem;
+        border-radius: 0.25rem;
 
-      &.first {
-        flex-grow: 3;
-      }
-
-      &.third {
-        flex-shrink: 2;
+        &.precedence {
+          order: -1;
+        }
       }
     }
   }
