--- a/03- CSS Flexbox/12- Sample/code/styles/index.css
+++ b/03- CSS Flexbox/12- Sample/code/styles/index.css
@@ -86,4 +86,46 @@ body {
       }
     }
   }
+
+  main {
+    .container {
+      text-align: center;
+
+      > span {
+        text-transform: uppercase;
+      }
+
+      h2 {
+        margin-block: 1rem 3rem;
+      }
+
+      > ul {
+        max-inline-size: min(60rem, 100%);
+
+        margin-inline: auto;
+
+        margin-block-end: 3rem;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+
+        > li {
+          display: grid;
+          gap: 1rem;
+        }
+      }
+
+      .img-wrapper {
+        max-inline-size: 25rem;
+        
+        margin-inline: auto;
+
+        img {
+          inline-size: 100%;
+        }
+      }
+    }
+  }
 }
