--- a/03- CSS Flexbox/12- Sample/code/styles/index.css
+++ b/03- CSS Flexbox/12- Sample/code/styles/index.css
@@ -117,14 +117,11 @@ body {
         }
       }
 
-      .img-wrapper {
+      img {
         max-inline-size: 25rem;
+        block-size: auto;
 
         margin-inline: auto;
-
-        img {
-          inline-size: 100%;
-        }
       }
     }
 
@@ -136,8 +133,6 @@ body {
 
         text-align: center;
 
-        padding-block: 3rem;
-
         > p {
           margin-block: 2rem;
         }
@@ -145,10 +140,12 @@ body {
         > ul {
           display: flex;
           flex-wrap: wrap;
-          align-items: center;
           justify-content: space-evenly;
+          align-items: center;
           gap: 1rem;
+        }
 
+        > ul.tweets {
           > li {
             flex-basis: 20%;
 
@@ -157,7 +154,7 @@ body {
               flex-flow: column wrap;
               justify-content: space-between;
 
-              block-size: 15rem;
+              min-block-size: 15rem;
 
               overflow-y: auto;
 
@@ -171,7 +168,7 @@ body {
               border-radius: 0.25rem;
 
               > p {
-                text-align: justify;
+                text-align: left;
               }
 
               > div {
@@ -196,6 +193,10 @@ body {
               }
             }
           }
+        }
+
+        > ul.companies {
+          margin-block-start: 2.5rem;
         }
       }
     }
