CSS: Update Files

--- a/02- CSS/09- Like IMDb/code/styles/index.css
+++ b/02- CSS/09- Like IMDb/code/styles/index.css
@@ -35,7 +35,7 @@ section {
         position: relative;
 
         img {
-          width: 100%;
+          inline-size: 100%;
         }
 
         .watchlist-icon {
