--- a/02- CSS/24- Like Survey Monkey/code/styles/index.css
+++ b/02- CSS/24- Like Survey Monkey/code/styles/index.css
@@ -51,7 +51,7 @@ body {
           font-size: small;
 
           inline-size: 1rem;
-          inline-size: 1rem;
+          block-size: 1rem;
 
           color: white;
           background-color: var(--priamry, #00bf6f);
