--- a/03- CSS Flexbox/10- Calculator/code/style/index.css
+++ b/03- CSS Flexbox/10- Calculator/code/style/index.css
@@ -1,77 +1,76 @@
 body {
-  height: 100dvh;
+  min-block-size: 100vh;
+  min-block-size: 100dvh;
+
   display: flex;
   align-items: center;
   justify-content: center;
-}
 
-.wrapper {
-  width: 25%;
-}
+  main {
+    inline-size: min(25rem, 80%);
 
-.row {
-  display: flex;
-  height: 3rem;
-}
+    .screen {
+      padding: 1rem;
 
-.screen,
-.btn {
-  font-size: large;
-  font-weight: bold;
-  border: 1px solid black;
-  display: flex;
-  align-items: center;
-}
+      block-size: 4rem;
 
-.screen {
-  padding: 1rem;
-  height: 4rem;
-  background-color: black;
-  color: white;
-}
+      background-color: black;
+      color: white;
+    }
 
-.btn {
-  background-color: var(--gray-500);
-  color: black;
-  justify-content: center;
-  flex-basis: 25%;
-}
+    .screen,
+    .button {
+      font-size: large;
+      font-weight: bold;
 
-.operation {
-  background-color: var(--primary);
-  color: white;
-}
+      border: 1px solid black;
 
-.double {
-  flex-grow: 2;
-}
+      display: flex;
+      align-items: center;
+    }
 
-.triple {
-  flex-grow: 3;
-}
+    .row {
+      display: flex;
 
-.arrow {
-  font-size: xx-large;
+      block-size: 3rem;
+
+      .button {
+        background-color: var(--gray-500);
+        color: black;
+
+        justify-content: center;
+        flex-basis: 25%;
+      }
+
+      .double {
+        flex-grow: 2;
+      }
+
+      .arrow {
+        font-size: xx-large;
+      }
+
+      .operation {
+        background-color: var(--primary);
+        color: white;
+      }
+
+      .triple {
+        flex-grow: 3;
+      }
+    }
+  }
 }
 
 .animate {
   animation: resize 0.1s;
-  -webkit-animation: resize 0.1s;
 }
 
 @keyframes resize {
   from {
     transform: scale(1.05);
-    -webkit-transform: scale(1.05);
-    -moz-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    -o-transform: scale(1.05);
-}
+  }
   to {
     transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
   }
 }
