--- a/03- CSS Flexbox/10- Calculator/code/style/main.css
+++ b/03- CSS Flexbox/10- Calculator/code/style/main.css
@@ -1,5 +1,7 @@
-* {
+*::before,
+::after {
   box-sizing: border-box;
+  
   padding: 0;
   margin: 0;
 }
@@ -16,5 +18,6 @@ body {
 button {
   border: none;
   outline: none;
+
   cursor: pointer;
 }
