--- a/03- CSS Flexbox/11- Like Google/code/style/style.css
+++ b/03- CSS Flexbox/11- Like Google/code/style/style.css
@@ -1,162 +1,141 @@
 body {
-  height: 100dvh;
-  font-size: small;
-}
+  min-block-size: 100vh;
+  min-block-size: 100dvh;
 
-header {
-  padding: 1rem;
-}
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 
-nav ul {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  gap: 0.75rem;
-}
+  header {
+    padding: 1rem 2rem;
 
-li a {
-  color: var(--black, #000000);
-}
-
-li a:hover {
-  text-decoration: underline;
-}
-
-button {
-  color: var(--white, #ffffff);
-  background-color: var(--blue, #1a73e8);
-  padding: 0.5rem 0.75rem;
-  border-radius: 0.25rem;
-  -webkit-border-radius: 0.25rem;
-  -moz-border-radius: 0.25rem;
-  -ms-border-radius: 0.25rem;
-  -o-border-radius: 0.25rem;
-}
-
-nav ul li {
-  text-transform: uppercase;
-  font-size: x-small;
-}
-
-main {
-  text-align: center;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-img {
-  width: 50%;
-  height: auto;
-}
-
-input[type="text"] {
-  display: block;
-  width: 100%;
-  height: 0.75rem;
-  background-color: transparent;
-  margin: 1rem auto;
-  padding: 1rem 1.5rem;
-  color: var(--black, #000000);
-  border: 1px solid var(--gray-2, #dadce0);
-  border-radius: 1.25rem;
-  -webkit-border-radius: 1.25rem;
-  -moz-border-radius: 1.25rem;
-  -ms-border-radius: 1.25rem;
-  -o-border-radius: 1.25rem;
-}
-
-input[type="submit"] {
-  color: var(--gray-9, #3c4043);
-  background-color: var(--white, #f8f9fa);
-  font-size: x-small;
-  padding: 0.5rem 0.75rem;
-  margin: 0.75rem 0.5rem;
-  border: 1px solid transparent;
-  border-radius: 0.25rem;
-  -webkit-border-radius: 0.25rem;
-  -moz-border-radius: 0.25rem;
-  -ms-border-radius: 0.25rem;
-  -o-border-radius: 0.25rem;
-}
-
-input[type="submit"]:hover {
-  border: 1px solid var(--gray-2, #dadce0);
-}
-
-footer {
-  width: 100%;
-  text-align: center;
-  position: fixed;
-  bottom: 0;
-  background-color: var(--white, #f8f9fa);
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-footer section ul li {
-  margin-bottom: 0.25rem;
-}
-
-footer section ul li a {
-  color: var(--gray-8, #70757a);
-}
-
-@media only screen and (min-width: 425px) {
-  body {
     font-size: medium;
+
+    nav {
+      > ul {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        gap: 1rem;
+
+        > li {
+          > a {
+            color: var(--black, #000000);
+          }
+
+          > button {
+            background-color: var(--blue, #1a73e8);
+
+            padding: 0.5rem 0.75rem;
+
+            border-radius: 0.25rem;
+
+            font-size: inherit;
+
+            > a {
+              color: var(--white, #ffffff);
+            }
+          }
+        }
+      }
+    }
   }
 
-  nav ul li {
-    text-transform: initial;
-    font-size: small;
-  }
-
-  img {
-    width: 40%;
-  }
-
-  footer {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  footer section ul {
+  main {
     display: flex;
-    font-size: small;
-    column-gap: 0.5rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+
+    img {
+      inline-size: min(15rem, 40%);
+      block-size: auto;
+    }
+
+    form {
+      display: grid;
+      gap: 1rem;
+
+      inline-size: max(15rem, 50%);
+
+      input[type="text"] {
+        display: block;
+
+        inline-size: 100%;
+        block-size: 0.75rem;
+
+        background-color: transparent;
+
+        margin-inline: auto;
+        padding: 1.25rem 1.5rem;
+
+        color: var(--black, #000000);
+
+        border: 1px solid var(--gray-2, #dadce0);
+
+        border-radius: 1.25rem;
+      }
+
+      .actions {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+
+        input[type="submit"] {
+          background-color: (--gray-2, #dadce0);
+          color: var(--gray-8, #70757a);
+
+          font-size: x-small;
+
+          padding: 0.5rem 0.75rem;
+          border-radius: 0.25rem;
+
+          &:hover {
+            color: var(--gray-9, #3c4043);
+          }
+        }
+      }
+    }
   }
 
-  input[type="submit"] {
-    font-size: small;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  input[type="text"] {
-    width: 60%;
-    height: 1.25rem;
-  }
-}
-
-@media only screen and (min-width: 1024px) {
-  img {
-    width: 25%;
-  }
-
-  input[type="text"] {
-    height: 2.5rem;
-  }
-
-  header,
   footer {
-    padding: 2rem;
+    padding: 1rem 2rem;
+
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+
+    ul {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+
+      font-size: small;
+
+      li {
+        a {
+          color: var(--gray-8, #70757a);
+        }
+      }
+    }
   }
 }
 
-@media print {
-  a[href^="http"]:after {
-    content: " (" attr(href) ")";
+@media screen and (max-width: 425px) {
+  body {
+    header {
+      font-size: small;
+    }
+
+    footer {
+      flex-direction: column;
+
+      ul {
+        flex-direction: column;
+
+        font-size: x-small;
+      }
+    }
   }
 }
