--- a/04- CSS Grid/07- Gallery/code/style/main.css
+++ b/04- CSS Grid/07- Gallery/code/style/main.css
@@ -1,6 +1,10 @@
-* {
+*,
+::before,
+*::after {
   font-family: "Times New Roman", Times, serif;
+
   margin: 0;
   padding: 0;
+
   box-sizing: border-box;
 }
