CSS Grid: Add dvh to block-size

--- a/04- CSS Grid/10/code/style/index.css
+++ b/04- CSS Grid/10/code/style/index.css
@@ -22,7 +22,8 @@ body {
 
     .container {
       block-size: 40vh;
-      
+      block-size: 40dvh;
+
       display: grid;
       grid-template-columns: min-content max-content;
       grid-template-rows: 4rem 4rem 4rem;
