--- a/04- CSS Grid/09/code/style/index.css
+++ b/04- CSS Grid/09/code/style/index.css
@@ -22,6 +22,7 @@ body {
 
     .container {
       block-size: 40vh;
+      block-size: 40dvh;
 
       display: grid;
       grid-template-columns: min-content max-content;
