--- a/04- CSS Grid/19- Exibition/code/style/index.css
+++ b/04- CSS Grid/19- Exibition/code/style/index.css
@@ -1,62 +1,61 @@
-main {
-  min-height: 100dvh;
+body {
+  min-block-size: 100vh;
+  min-block-size: 100dvh;
+
   display: flex;
   align-items: center;
   justify-content: center;
-}
 
-.wrapper {
-  max-width: 45%;
-  min-height: 70dvh;
-  display: grid;
-  grid-template: repeat(2, 1fr) / repeat(4, 1fr);
-  align-content: center;
-  justify-content: center;
-  gap: 0.5rem;
-}
+  main {
+    max-inline-size: 45%;
+    min-block-size: 70dvh;
 
-.product-card {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  justify-content: space-between;
-  row-gap: 1rem;
-  padding: 0.5rem;
-  background-color: #eec4dc;
-  border-radius: 0.25rem;
-  -webkit-border-radius: 0.25rem;
-  -moz-border-radius: 0.25rem;
-  -ms-border-radius: 0.25rem;
-  -o-border-radius: 0.25rem;
-}
+    display: grid;
+    grid-template: repeat(2, 1fr) / repeat(4, 1fr);
+    align-content: center;
+    justify-content: center;
+    gap: 0.5rem;
 
-.img-wrapper img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+    .product-card {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      row-gap: 1rem;
 
-.product-card button {
-  padding: 0.5rem 0.75rem;
-  font-size: small;
-  font-weight: bold;
-  background-color: #7f3667;
-  text-transform: uppercase;
-  letter-spacing: 0.25rem;
-  border-radius: 0.25rem;
-  -webkit-border-radius: 0.25rem;
-  -moz-border-radius: 0.25rem;
-  -ms-border-radius: 0.25rem;
-  -o-border-radius: 0.25rem;
-  opacity: 0.5;
-  transition: all 1s;
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -ms-transition: all 1s;
-  -o-transition: all 1s;
-}
+      padding: 0.5rem;
 
-.product-card button:hover {
-  opacity: 1;
-  letter-spacing: initial;
+      background-color: #eec4dc;
+      border-radius: 0.25rem;
+
+      img {
+        inline-size: 100%;
+        block-size: 100%;
+
+        object-fit: cover;
+      }
+
+      button {
+        padding: 0.5rem 0.75rem;
+
+        font-size: small;
+        font-weight: bold;
+
+        background-color: #7f3667;
+
+        text-transform: uppercase;
+        letter-spacing: 0.25rem;
+
+        border-radius: 0.25rem;
+
+        opacity: 0.5;
+
+        transition: all 1s;
+
+        &:hover {
+          opacity: 1;
+          letter-spacing: initial;
+        }
+      }
+    }
+  }
 }
