--- a/04- CSS Grid/19- Exibition/code/style/tablet.css
+++ b/04- CSS Grid/19- Exibition/code/style/tablet.css
@@ -1,7 +1,10 @@
-.wrapper {
-  margin: 2rem;
-  max-width: 60%;
-  grid-template: repeat(4, 1fr) / repeat(2, 1fr);
-  gap: 1rem 0.5rem;
-}
+body {
+  main {
+    max-inline-size: 60%;
 
+    margin-block: 1.5rem;
+
+    grid-template: repeat(4, 1fr) / repeat(2, 1fr);
+    gap: 1rem 0.5rem;
+  }
+}
